--- a/layouts/partials/head/css.html
+++ b/layouts/partials/head/css.html
@@ -1,3 +1,3 @@
 <style>
-:root{--color-accent: {{- .Site.Params.settings.accentColor | default "#ffcd00" -}};}
+:root{--color-accent: {{- .Site.Params.settings.accentColor | default "#6503ff" -}};}
 </style>
