--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,6 +5,11 @@
 
 <body class='{{ partial "header/bodyClasses" . }}'>
 
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5TN68WD"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
   <div class='site'>
 
     {{ partial "sidebar/sidebar" . }}
