update list view

--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -11,5 +11,9 @@
 <div class="post-summary">
       {{ .Summary }}
     </div>
+    <div class="post-meta">
+    {{ partial "entry/meta/author" . }}
+    {{ partial "entry/meta/reading-time" . }}
+  </div>
   </header>
 </li>
