--- a/layouts/partials/head/opengraph.html
+++ b/layouts/partials/head/opengraph.html
@@ -32,15 +32,7 @@
     {{- $author := ( index $.Site.Data.authors $authorID ) -}}
     {{- with $author -}}
       {{- if or .social.email ( and .email.username .email.host ) -}}
-      <meta property='og:image' content='https://www.gravatar.com/avatar/
-        {{- with .social.email -}}
-          {{- . | md5 -}}
-        {{- else -}}
-          {{- with .email -}}
-            {{- ( print .username "@" .host ) | md5 -}}
-          {{- end -}}
-        {{- end -}}
-        ?s=256'>
+      <meta property='og:image' content='https://www.paperchain.io/assets/img/bg-paperchain-14.png'>
       {{- end -}}
     {{- end -}}
   {{- end -}}
