--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -1,7 +1,7 @@
 <head>
   {{ partial "head/meta" . }}
   <title>{{ partial "data/title" . }}</title>
-  <link rel='canonical' href='{{ .Permalink }}'>
+  <link rel='canonical' href='{{.Params.canonical | default .Permalink}}'>
   {{ if .RSSLink }}
     <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
   {{ end }}
