--- a/layouts/partials/widgets/about.html
+++ b/layouts/partials/widgets/about.html
@@ -29,8 +29,7 @@
 </div>
   <div class='side-menu'>
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="https://resources.paperchain.io/protocol-paper/">Protocol Paper</a></li>
+      <li><a href="/">Blog Home</a></li>
       <li><a href="https://paperchain.io">paperchain.io</a></li>
     </ul>
     </div>
