--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -9,9 +9,9 @@
       </a>
     </h3>
 <div class="post-summary">
-      {{ .Summary }}
+      {{ .Description }}
     </div>
-    <div class="post-meta">
+    <div class="post-meta" style="padding-top:10px;">
     {{ partial "entry/meta/author" . }}
     {{ partial "entry/meta/reading-time" . }}
   </div>
